<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearNews</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="sync">Sync</string>
    <string name="correct_answer_fragment">Correct Question Fragment</string>
    <string name="wrong_answer_fragment">Wrong Question Fragment</string>
    <string name="quiz_question_fragment">Quit Question Fragment</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="saved_stories">Saved Stories</string>
    <string name="title_activity_read_later">Saved Stories</string>
    <string name="report_button">Report!</string>
    <string name="new_game_menu_button">New Game</string>
    <string name="add_questions_menu_button">Add Questions</string>
    <string name="your_stories_menu_button">Saved Stories</string>
    <string name="categories_title">Categories</string>
    <string name="saved_stories_activity_label">SavedStoriesActivity</string>
    <string name="sound_menu_button">Sound</string>
    <string name="bookmarks_menu_button">Bookmarks</string>
    <string name="achievements_menu_button">Achievements</string>
    <string name="menu_action_sign_out">Sign Out</string>
    <string name="menu_action_change_background">Change Background</string>
    <string name="menu_action_about">About</string>
    <string name="change_background_dialog_question">What colour would you like your background to be?</string>
    <string name="title_activity_add_questions">AddQuestions</string>
    <string name="add_question_text">Add Your Question Here</string>
    <string name="answers">Answers:</string>
    <string name="link_title">Please paste a link from a reliable source to your new story:</string>
    <string name="link_text">http://www.bbc.com/sport/football/world-cup/2014</string>
    <string name="submit_button">Submit</string>
    <string name="complete_all_fields">Please complete all fields!</string>
    <string name="select_correct_answer">Please select a correct answer!</string>
    <string name="background_color_1">White</string>
    <string name="background_color_2">Blue</string>
    <string name="background_color_3">Yellow</string>
    <string name="background_color_4">Gray</string>
    <string name="background_color_5">Red</string>
    <string name="title_activity_login">LoginActivity</string>

    <string-array name="correct_comments">
        <item>"Good job!"</item>
        <item>"Correct!"</item>
        <item>"You are right!"</item>
        <item>"Nice!"</item>
        <item>"That\'s right!"</item>
        <item>"Good!"</item>
        <item>"Amazing!"</item>
        <item>"You\'re better then Google!"</item>
        <item>"Wonderful!"</item>
        <item>"Oh yeah!"</item>
        <item>Good job!</item>
        <item>Correct!</item>
        <item>You are right!</item>
        <item>Nice!</item>
        <item>That\'s right!</item>
        <item>Good!</item>
        <item>Amazing!</item>
        <item>You\'re better than Google!</item>
        <item>Wonderful!</item>
        <item>Oh yeah</item>
    </string-array>
    <string-array name="wrong_comments">
        <item>"Oh No!"</item>
        <item>"Try again next time..."</item>
        <item>"Nope..."</item>
        <item>"That\'s wrong..."</item>
        <item>"You can do better!"</item>
        <item>"Really\?!"</item>
        <item>"Why don\'t you google it?"</item>
        <item>"No Way!"</item>
    </string-array>
    <string-array name="categories">
        <item>"Economy"</item>
        <item>"Politics"</item>
        <item>"Science"</item>
        <item>"Tech"</item>
        <item>"Entertainment"</item>
        <item>"Health"</item>
        <item>"Travel"</item>
        <item>"Sport"</item>
    </string-array>

    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_text">Sign In</string>
    <string name="email_text">Email address:</string>
    <string name="password_text">Password:</string>
    <string name="register_help_message">Don\'t have an account?</string>
    <string name="register_message">Register Here</string>
    <string name="forgot_password_help_message">Forgot your password?</string>
    <string name="forgot_password_button_message">Email password</string>
    <string name="invalid_email_or_password">Invalid email or password. Please try again.</string>
    <string name="unable_to_connect">Unable to connect to the internet. Please check your internet connection!</string>
    <string name="invalid_password">Invalid password. Please try again.</string>
    <string name="invalid_email">Invalid email address. Please try again.</string>
    <string name="default_score">0</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_text">Register a new account</string>
    <string name="confirm_email_text">Confirm email address:</string>
    <string name="confirm_password_text">Confirm password:</string>
    <string name="register_account_message">Register Account</string>
    <string name="passwords_do_not_match">Passwords don\'t match! Please try again. </string>
    <string name="password_min_length">Please choose a password with minimum 6 characters. </string>
    <string name="emails_do_not_match">Emails don\'t match! Please try again.</string>
    <string name="go_to_sign_in_message">Already have an account?</string>
    <string name="email_not_unique">Email was used before!</string>
    <string name="recent_questions">Recent Questions</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="title_activity_recent_questions">RecentQuestionsActivity</string>

</resources>
