<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/menu_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/app_name_menu"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/app_name_menu"/>

    <Button
        android:id="@+id/new_game_menu_button"
        android:text="@string/new_game_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/app_name_menu"
        android:onClick="newGameMenuButtonClicked"/>

    <Button
        android:id="@+id/add_questions_menu_button"
        android:text="@string/add_questions_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_game_menu_button"
        android:onClick="addQuestionsMenuButtonClicked"/>

    <Button
        android:id="@+id/your_stories_menu_button"
        android:text="@string/your_stories_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_questions_menu_button"
        android:onClick="SavedStoriesMenuButtonClicked"/>


</RelativeLayout>