<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.appchee.learnews.SignInActivity">

        <TextView
            android:id="@+id/register_text"
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/email_text"
            android:text="@string/email_text"
            android:layout_below="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/confirm_email_text"
            android:text="@string/confirm_email_text"
            android:layout_below="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textSize="30dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/confirm_email_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_email_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/password_text"
            android:text="@string/password_text"
            android:layout_below="@+id/confirm_email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:textSize="30sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textSize="30dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/confirm_password_text"
            android:text="@string/confirm_password_text"
            android:layout_below="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textSize="30sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:textSize="30dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@color/white"
            />

        <Button
            android:id="@+id/register_account_button"
            android:text="@string/register_account_message"
            android:layout_below="@+id/confirm_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:onClick="registerAccountButtonClicked"
            />

        <TextView
            android:id="@+id/signin_text"
            android:text="@string/go_to_sign_in_message"
            android:layout_below="@+id/register_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/signin_button"
            android:text="@string/sign_in_text"
            android:layout_below="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="signInButtonClicked"
            />



    </RelativeLayout>
</ScrollView>